# Drachennest

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  NOTICE  README.md  premake5.lua
bench/: CMakeLists.txt  bench_dtoa.cc  bench_strtod.cc
bench/results/: plot.py
bench/results/clang-10.0/i7-9750H/: dragonbox.csv  grisu3.csv  plot.py  ryu.csv  schubfach.csv
bench/results/clang-8.0/i3-6006U @2.00 GHz/csv/: charconv-general.csv  charconv.csv  grisu2.csv  grisu3.csv  ryu-upstream.csv  ryu.csv
bench/results/gcc-8.1/: double-conversion.txt  dragon4.txt  floaxie.txt  grisu2.txt  grisu2_no_round.txt  grisu3_dragon4.txt  milo.txt  ryu.txt
bench/results/gcc-8.1/i3-6006U @2.00 GHz/: double-conversion.txt  dragon4.txt  floaxie.txt  grisu2.txt  grisu2_no_round.txt  grisu2_table.txt  grisu2_to_decimal.txt  grisu2_to_decimal_no_round.txt  grisu3_dragon4.txt  grisu3_dragon4_table.txt  milo.txt  ryu.txt  ryu_table.txt  ryu_to_decimal.txt  swift.txt
bench/results/gcc-8.1/i3-6006U @2.00 GHz/csv/: grisu2.csv  grisu3.csv  ryu-latest-q.csv  ryu-latest.csv  ryu-upstream.csv  ryu.csv
bench/results/gcc-8.1/i5-7500 @ 3.40 GHz/: double-conversion.txt  dragon4.txt  grisu2.txt  grisu2_no_round.txt  grisu3_dragon4.txt  ryu.txt
bench/results/gcc-8.1/i5-7500 @3.40 Ghz/: double_conversion.txt  grisu2.txt  grisu3.txt  ryu.txt
bench/results/vc142/: charconv.txt  double-conversion.txt  dragon4.txt  floaxie.txt  grisu2.txt  grisu2_no_round.txt  grisu3_dragon4.txt  milo.txt  ryu.txt
bench/results/vc142-x86/i3-6006U @2.00 GHz/: charconv.txt  double-conversion.txt  dragon4.txt  grisu2.txt  grisu2_no_round.txt  grisu3_dragon4.txt  ryu.txt
bench/results/vc142/i3-6006U @2.00 GHz/: charconv.txt  double-conversion.txt  dragon4.txt  floaxie.txt  grisu2.txt  grisu2_no_round.txt  grisu3_dragon4.txt  milo.txt  ryu.txt
bench/results/vc142/i3-6006U @2.00 GHz/csv/: charconv-general.csv  charconv.csv  grisu2.csv  grisu3.csv  ryu-upstream.csv  ryu.csv
bench/results/vc142/i5-7500 @ 3.40 GHz/: charconv.txt  double-conversion.txt  dragon4.txt  grisu2.txt  grisu2_no_round.txt  grisu3_dragon4.txt  ryu.txt
bench/results/vc142/i5-7500 @3.40 Ghz/: charconv.txt  double_conversion.txt  grisu2.txt  grisu3.txt  ryu.txt
ext/: CMakeLists.txt
ext/benchmark/: benchmark_register.cc  internal_macros.h
ext/floaxie/: README.md  atof.h  bit_ops.h  cached_power.h  default_fallback.h  diy_fp.h  fraction.h  ftoa.h  grisu.h  krosh.h  powers_ten_double.h  powers_ten_single.h  prettify.h  print.h
ext/google_benchmark/: CMakeLists.txt
ext/google_benchmark/src/: benchmark_register.cc
ext/google_double_conversion/: CMakeLists.txt
ext/milo/: dtoa_milo.h
ext/ryu/: CMakeLists.txt
ext/ryu/ryu/: d2s.c
lib/: charconv.cc  charconv.h  double-conversion.cc  double-conversion.h  floaxie.cc  floaxie.h  grisu2.cc  grisu2.h  grisu3.cc  grisu3.h  milo.cc  milo.h  ryu.cc  ryu.h
scripts/: baseconv.py  mod.py  powers.py
scripts/dtoa/: dtoa_adams.py  dtoa_burger_dybvig.py  dtoa_ryu.py
scripts/grisu/: compute_powers.py
scripts/ryu/: compute_bit_sizes.py  compute_logs.py  compute_powers.py  compute_table_sizes.py  euclid_min_max.py
src/: CMakeLists.txt  charconv_f32.cc  charconv_f32.h  charconv_f64.cc  drachennest.cc  drachennest.h  dragon4.cc  dragon4.h  dragonbox.cc  dragonbox.h  dtoa.h  fast_dtoa.h  format_digits.h  grisu2.cc  grisu2.h  grisu2_57_32.h  grisu2_60_32.h  grisu2_60_32_ref.h  grisu2_60_32_ref1.h  grisu2b.cc  grisu2b.h  grisu3.cc  grisu3.h  ieee.h  jkj_dragonbox_to_chars.h  ryu.h  ryu_32.cc  ryu_32.h  ryu_64.cc  ryu_64.h  ryu_charconv.cc  ryu_charconv.h  ryu_to_chars.cc  schubfach_32.cc  schubfach_64.cc  strtod.h  strtod_0.h
src/ryu/: charconv_common.h  charconv_f32.cc  charconv_f32.h  charconv_f64.cc  charconv_f64.h  ryu_charconv.cc  ryu_charconv.h
test/: CMakeLists.txt  base_conv.cc  base_conv.h  catch.hpp  find_max_p1.cc  scan_number.h  test.cc  test_all_floats.cc  test_dtoa.cc  test_some_doubles.cc  test_strtod.cc
